# sqlparse

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml  rust.yml
benches/: bench.rs
examples/: format.rs  format_multiple.rs  parse.rs
src/: formatter.rs  keywords.rs  lexer.rs  lib.rs  trie.rs
src/engine/: filter_stack.rs  grouping.rs  mod.rs  splitter.rs
src/filters/: aligned_indent.rs  mod.rs  others.rs
tests/: format.rs  grouping.rs  parse.rs  regressions.rs  split.rs  tokenize.rs
