[package]
name = "sqlparse"
description = "A SQL Parser and Formatter for Rust"
version = "0.3.3"
authors = ["xxf098 <xxf098@protonmail.com>"]
homepage = "https://github.com/xxf098/sqlparse"
documentation = "https://docs.rs/sqlparse/latest/sqlparse/"
keywords = [ "ansi", "sql", "lexer", "parser" ]
repository = "https://github.com/xxf098/sqlparse"
license = "BSD-3-Clause"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"


[dev-dependencies]
criterion = "0.3"
